vemo-app/main/default/objects/Log__c/fields/DateTimeLogged__c.field-meta.xml
<CustomField>
    <fullName>DateTimeLogged__c</fullName>
    <label>DateTime Logged</label>
    <type>DateTime</type>
</CustomField>