vemo-app/main/default/objects/Log__c/fields/MillisecondsLogged__c.field-meta.xml
<CustomField>
    <fullName>MillisecondsLogged__c</fullName>
    <label>Milliseconds Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>