vemo-app/main/default/objects/Log__c/fields/RelatedTo__c.field-meta.xml
<CustomField>
    <fullName>RelatedTo__c</fullName>
    <label>RelatedTo</label>
    <type>TextArea</type>
</CustomField>