vemo-app/main/default/objects/Log__c/fields/SecondsLogged__c.field-meta.xml
<CustomField>
    <fullName>SecondsLogged__c</fullName>
    <label>Seconds Logged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>