vemo-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DateTimeLogged__c</columns>
    <columns>SecondsLogged__c</columns>
    <columns>MillisecondsLogged__c</columns>
    <columns>Critical__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RelatedTo__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>