vemo-app/main/default/objects/Log__c/listViews/CHINCHILLA_RETRO.listView-meta.xml
<ListView>
    <fullName>CHINCHILLA_RETRO</fullName>
    <columns>NAME</columns>
    <columns>DateTimeLogged__c</columns>
    <columns>SecondsLogged__c</columns>
    <columns>MillisecondsLogged__c</columns>
    <columns>Critical__c</columns>
    <columns>RelatedTo__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>4/18/2017 1:11 PM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/18/2017 12:47 PM</value>
    </filters>
    <label>CHINCHILLA RETRO</label>
</ListView>