vemo-app/main/default/objects/Log__c/listViews/Critical.listView-meta.xml
<ListView>
    <fullName>Critical</fullName>
    <columns>NAME</columns>
    <columns>Log__c</columns>
    <columns>DateTimeLogged__c</columns>
    <columns>SecondsLogged__c</columns>
    <columns>MillisecondsLogged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Critical__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Critical</label>
</ListView>