vemo-app/main/default/objects/Log__c/listViews/EMILY_SPEAR_RETRO.listView-meta.xml
<ListView>
    <fullName>EMILY_SPEAR_RETRO</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Critical__c</columns>
    <columns>Log__c</columns>
    <columns>DateTimeLogged__c</columns>
    <columns>SecondsLogged__c</columns>
    <columns>MillisecondsLogged__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DateTimeLogged__c</field>
        <operation>greaterThan</operation>
        <value>4/10/2017 5:10 PM</value>
    </filters>
    <filters>
        <field>DateTimeLogged__c</field>
        <operation>lessThan</operation>
        <value>4/10/2017 6:00 PM</value>
    </filters>
    <label>EMILY SPEAR RETRO</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>