vemo-app/main/default/objects/Log__c/listViews/RODRIGUEZ_RETRO.listView-meta.xml
<ListView>
    <fullName>RODRIGUEZ_RETRO</fullName>
    <columns>NAME</columns>
    <columns>DateTimeLogged__c</columns>
    <columns>SecondsLogged__c</columns>
    <columns>MillisecondsLogged__c</columns>
    <columns>Critical__c</columns>
    <columns>RelatedTo__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>4/15/2017 6:50 PM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/15/2017 6:39 PM</value>
    </filters>
    <label>RODRIGUEZ RETRO</label>
</ListView>